CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(J2534)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Werror")

# J2534
SET(J2534_SOURCE_FILES ${J2534_SOURCE_FILES} j2534_v0404.h)
SET(J2534_SOURCE_FILES ${J2534_SOURCE_FILES} j2534.h j2534.cpp)

SET(LIB_TYPE SHARED)
ADD_LIBRARY(j2534 ${LIB_TYPE} ${J2534_SOURCE_FILES})
SET_TARGET_PROPERTIES(j2534 PROPERTIES COMPILE_FLAGS "-DJ2534_EXPORTS")

# SWIG
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")

# SWIG J2534
SET_SOURCE_FILES_PROPERTIES(j2534.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(j2534_python python j2534.i)
SWIG_LINK_LIBRARIES(j2534_python j2534)
SWIG_LINK_LIBRARIES(j2534_python ${PYTHON_LIBRARIES})
SET_TARGET_PROPERTIES(${SWIG_MODULE_j2534_python_REAL_NAME} PROPERTIES OUTPUT_NAME "j2534")
SET_TARGET_PROPERTIES(${SWIG_MODULE_j2534_python_REAL_NAME} PROPERTIES PREFIX "_")
SET_TARGET_PROPERTIES(${SWIG_MODULE_j2534_python_REAL_NAME} PROPERTIES COMPILE_FLAGS "-Wno-error=missing-field-initializers")
ADD_CUSTOM_COMMAND(TARGET ${SWIG_MODULE_j2534_python_REAL_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/j2534.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
